fix inline <code> baseline misalignment.

--- a/static/css/blog/main.css
+++ b/static/css/blog/main.css
@@ -134,7 +134,6 @@ h5 {
 
 .post p code {
   padding: 0 4px;
-  vertical-align: top;
   white-space: nowrap;
 }
 
